[package]
name = "discordthing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
env_logger = "0.11.7"
iced = "0.13.1"
log = "0.4.26"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
