[package]
name = "discordthing"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/mascararivers/HookMultiTool"
rust-version = "1.85.0"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
anyhow = "1.0.97"
env_logger = "0.11.7"
iced = "0.13.1"
log = "0.4.26"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
weboxide = "0.1.1"
